# mlops-proyecto-final-equipo8

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  train_simple.py
config/: mlflow_config.py  settings.py
docs/: deployment_guide.md  monitoring_proposal.md
notebooks/: 01_eda.ipynb  02_baseline.ipynb
scripts/: experimentos_iniciales.py  model_registry.py  run_monitoring_snapshot.py  tuning_hiperparametros.py  validacion_mlflow_setup.py
src/api/: main.py  schemas.py
src/data/: __init__.py  etl.py  loaders.py  preprocesamiento.py  quality.py
src/features/: __init__.py  engineering.py  preprocessing.py  transformers.py
src/models/: __init__.py  baseline.py
src/monitoring/: __init__.py  drift_detector.py  report.py
src/pipelines/: flow_entrenamiento.py  flow_preprocesamiento.py  flow_principal.py  scheduling.py
tests/unit/: test_baseline.py  test_data_quality.py  test_feature_engineering.py  test_monitoring.py  test_preprocessing.py
